[animation] fixed collapse animations in Safari (#624)
## Description

I have rebuild collapse animation from css `animation` to css
`transition`.

## Motivation and Context

Currently collapse animation works fine except working in Safari.

## How has this been tested?

I have manually tested it in Safari, Chrome and Firefox. Seems to work
fine in all modern browsers.

## Types of changes

<!--- What types of changes does your code introduce? Put an `x` in all
the boxes that apply: -->

- [x] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)

## Checklist:

<!--- Go over all the following points, and put an `x` in all the boxes
that apply. -->
<!--- If you're unsure about any of these, don't hesitate to ask. We're
here to help! -->

- [x] My code follows the code style of this project.
- [ ] My change requires a change to the documentation.
- [ ] I have updated the documentation accordingly.

--- a/semcore/animation/src/style/keyframes.shadow.css
+++ b/semcore/animation/src/style/keyframes.shadow.css
@@ -1,20 +1,28 @@
 @keyframes collapse-enter {
   from {
     overflow: hidden;
-    height: 0;
   }
   to {
-    height: var(--height);
+    overflow: hidden;
   }
 }
 @keyframes collapse-exit {
   from {
-    height: var(--height);
+    overflow: hidden;
   }
   to {
-    height: 0;
+    overflow: hidden;
   }
 }
+SCollapse {
+  transition-property: height;
+  height: 0;
+}
+SCollapse[visible] {
+  transition-property: height;
+  height: 0;
+}
+
 @keyframes fade-in-out-enter {
   from {
     opacity: 0;
